[package]
name = "passfort"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "passfort"
path = "src/main.rs"

[[bin]]
name = "pf"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "7.3"
argon2 = "0.5"
dialoguer = "0.11"
rand = "0.8"